Cambio en el planteamiento del proyecto, volvemos al control de movimiento anterior, creando codigo base

--- a/resources.cfg
+++ b/resources.cfg
@@ -1,6 +1,6 @@
 [General]
 FileSystem=media
-FileSystem=media/diana
+FileSystem=media/Lvl1
 FileSystem=media/arco
 FileSystem=media/flecha
 FileSystem=media/skybox
