--- a/resources.cfg
+++ b/resources.cfg
@@ -10,6 +10,8 @@ FileSystem=media/wall
 FileSystem=media/xml_schemas
 FileSystem=media/Music
 FileSystem=media/globe
+FileSystem=media/Scenes
+FileSystem=media/Scenes/Level 1
 [Schemes]
 FileSystem=media/schemes
 [Imagesets]
