Escenario 2 y enemigo implementado

--- a/resources.cfg
+++ b/resources.cfg
@@ -8,6 +8,8 @@ FileSystem=media/Music
 FileSystem=media/Scenes
 FileSystem=media/TeddyBear
 FileSystem=media/Scenes/Level 1
+FileSystem=media/Scenes/Level 2
+FileSystem=media/Enemies/Level 1
 [Schemes]
 FileSystem=media/schemes
 [Imagesets]
