Introduccido objeto hilo con colisiones. Corregir cuando se coja un hilo

--- a/resources.cfg
+++ b/resources.cfg
@@ -7,6 +7,7 @@ FileSystem=media/xml_schemas
 FileSystem=media/Music
 FileSystem=media/Scenes
 FileSystem=media/TeddyBear
+FileSystem=media/Hilo
 FileSystem=media/Scenes/Level 1
 FileSystem=media/Scenes/Level 2
 FileSystem=media/Enemies/Level 1
