--- a/resources.cfg
+++ b/resources.cfg
@@ -7,7 +7,8 @@ FileSystem=media/xml_schemas
 FileSystem=media/Music
 FileSystem=media/Scenes
 FileSystem=media/TeddyBear
-FileSystem=media/Hilo
+FileSystem=media/Coleccionables/Hilo
+FileSystem=media/Coleccionables/Bobina
 FileSystem=media/Scenes/Level 1
 FileSystem=media/Scenes/Level 2
 FileSystem=media/Enemies/Level 1
