Cambios en menustate

--- a/resources.cfg
+++ b/resources.cfg
@@ -7,11 +7,17 @@ FileSystem=media/xml_schemas
 FileSystem=media/Music
 FileSystem=media/Scenes
 FileSystem=media/TeddyBear
+[Coleccionables]
 FileSystem=media/Coleccionables/Hilo
 FileSystem=media/Coleccionables/Bobina
+[Scenes]
 FileSystem=media/Scenes/Level 1
 FileSystem=media/Scenes/Level 2
+[Enemies]
 FileSystem=media/Enemies/Level 1
+[Doors]
+FileSystem=media/Doors/Door Room
+FileSystem=media/Doors/Door Garden
 [Schemes]
 FileSystem=media/schemes
 [Imagesets]
