Subido un poco el escenario y implementado vagon para el boss

--- a/resources.cfg
+++ b/resources.cfg
@@ -15,6 +15,7 @@ FileSystem=media/Scenes/Level 1
 FileSystem=media/Scenes/Level 2
 [Enemies]
 FileSystem=media/Enemies/Level 1
+FileSystem=media/Boss
 [Doors]
 FileSystem=media/Doors/Door Room
 FileSystem=media/Doors/Door Garden
