Animacion correr Hero solo probada (Queda implementarla a la clase)

--- a/resources.cfg
+++ b/resources.cfg
@@ -6,7 +6,7 @@ FileSystem=media/wall
 FileSystem=media/xml_schemas
 FileSystem=media/Music
 FileSystem=media/Scenes
-FileSystem=media/TeddyBear
+FileSystem=media/Hero
 [Coleccionables]
 FileSystem=media/Coleccionables/Hilo
 FileSystem=media/Coleccionables/Bobina
