Obstaculo Spike implementado para poblar niveles

--- a/resources.cfg
+++ b/resources.cfg
@@ -19,6 +19,8 @@ FileSystem=media/Boss
 [Doors]
 FileSystem=media/Doors/Door Room
 FileSystem=media/Doors/Door Garden
+[Obstacles]
+FileSystem=media/Obstacles/Spike
 [Schemes]
 FileSystem=media/schemes
 [Imagesets]
