Ya van las partículas. Añadidos archivos que faltaban para que funcionasen (textura de humo y los colores del humo). Falta escalarla y colocarla bien

--- a/resources.cfg
+++ b/resources.cfg
@@ -31,4 +31,6 @@ FileSystem=media/fonts
 FileSystem=media/layouts
 [LookNFeel]
 FileSystem=media/looknfeel
+[Particles]
+FileSystem=media/particles
 
