Escenario seleccion de niveles

--- a/resources.cfg
+++ b/resources.cfg
@@ -13,12 +13,12 @@ FileSystem=media/Coleccionables/Bobina
 [Scenes]
 FileSystem=media/Scenes/Level 1
 FileSystem=media/Scenes/Level 2
+FileSystem=media/Scenes/SelectionLevel
 [Enemies]
 FileSystem=media/Enemies/Level 1
 FileSystem=media/Boss
 [Doors]
-FileSystem=media/Doors/Door Room
-FileSystem=media/Doors/Door Garden
+FileSystem=media/Doors
 [Obstacles]
 FileSystem=media/Obstacles/Spike
 [Schemes]
