Nuevo enemigo implementado y escenario de seleccion de nivel arreglado

--- a/resources.cfg
+++ b/resources.cfg
@@ -17,6 +17,7 @@ FileSystem=media/Scenes/SelectionLevel
 [Enemies]
 FileSystem=media/Enemies/Level 1
 FileSystem=media/Boss
+FileSystem=media/Enemies/Rex
 [Doors]
 FileSystem=media/Doors
 [Obstacles]
