Prueba de particulas todavia no terminado...

--- a/resources.cfg
+++ b/resources.cfg
@@ -34,4 +34,6 @@ FileSystem=media/layouts
 FileSystem=media/looknfeel
 [Particles]
 FileSystem=media/particles
+FileSystem=media/particles/smoke
+FileSystem=media/particles/aureola
 
